--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.5.0
+  flutter_secure_storage: ^9.2.4
   flutter_svg: ^2.0.7
 
 dev_dependencies:
