--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   http: ^1.5.0
   flutter_secure_storage: ^9.2.4
   flutter_svg: ^2.0.7
+  mask_text_input_formatter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
