--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   flutter_svg: ^2.0.7
   mask_text_input_formatter: ^2.9.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
