--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_svg: ^2.0.7
   mask_text_input_formatter: ^2.9.0
   shared_preferences: ^2.5.3
+  diacritic: ^0.1.3
 
 dev_dependencies:
   flutter_test:
