--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   mask_text_input_formatter: ^2.9.0
   shared_preferences: ^2.5.3
   diacritic: ^0.1.3
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
