--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,11 @@ dependencies:
   mask_text_input_formatter: ^2.9.0
   shared_preferences: ^2.5.3
   diacritic: ^0.1.3
+  qr_flutter: ^4.0.0
+  share_plus: ^12.0.0
+  mobile_scanner: ^2.0.0
+  printing: ^5.11.0
+  pdf: ^3.11.0
 
 dev_dependencies:
   flutter_test:
