--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   diacritic: ^0.1.3
   qr_flutter: ^4.0.0
   share_plus: ^12.0.0
-  mobile_scanner: ^2.0.0
+  mobile_scanner: 3.3.0
   printing: ^5.11.0
   pdf: ^3.11.0
 
