--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   dio: ^5.0.0
   http: ^1.5.0
   flutter_secure_storage: ^9.2.4
@@ -24,7 +26,7 @@ dependencies:
   pdf: ^3.11.0
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
-  intl: ^0.18.1
+  intl: 0.20.2
 
 dev_dependencies:
   flutter_test:
