--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   intl: 0.20.2
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
