--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   equatable: ^2.0.5
   intl: 0.20.2
   fl_chart: ^0.68.0
+  stomp_dart_client: ^0.4.4
 
 dev_dependencies:
   flutter_test:
